tests/negative/option/option_to_non_option.tx
// EXPECTED: COMPILE_ERROR
// Description: Test assigning None to a non-nullable type.

function main() {
    let x: int = None; // Error: Type mismatch
}
